# exercises

./: CMakeLists.txt
src/core/: CMakeLists.txt  config.cppm  config.h.cppm
